# Quirky

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.cursor/rules/: quirky.mdc
.github/workflows/: ci.yml
demo_assets/: ai_text_aligned.txt  ai_text_raw.txt
docs/: CROSSTOOL.md  QUIRKY_LAYERS_BLUEPRINT.md  RESPONSIBLE_USE.md  SKILLS_AND_AGENTS.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/asset_optimizer/: SKILL.md
plugin/skills/cliche_pruner/: SKILL.md
plugin/skills/comment_pruner/: SKILL.md
plugin/skills/formatting_sanitizer/: SKILL.md
plugin/skills/rhythm_sculptor/: SKILL.md
quirky/: __init__.py
quirky/agent/: __init__.py  core.py  middleware.py
quirky/api/: main.py
quirky/audio/: __init__.py  pipeline.py
quirky/benchmarks/: bench.py  eval_suite.py
quirky/clean/: __init__.py  metadata.py
quirky/cli/: main.py  scaffold.py
quirky/cli/templates/: AGENTS.md  CLAUDE.md  __init__.py  quirky.mdc
quirky/detector/: __init__.py  calibrate.py  engine.py  fit_calibrator.py  formulas.py  lexicons.py  spans.py
quirky/diagnose/: __init__.py  fidelity.py  fingerprint.py  maps.py  oracle.py  remap.py  report.py
quirky/examples/: demo.py  lite_trainer.py
quirky/fix/: similarity.py  text.py
quirky/hooks/: check.py
quirky/image/: __init__.py  pipeline.py  transforms.py
quirky/mcp/: server.py
quirky/plugins/: __init__.py  dl.py
quirky/sdk/: __init__.py  client.py
quirky/skills/: __init__.py  base.py  code.py  media.py  text.py
quirky/text/: __init__.py  pipeline.py
quirky/video/: __init__.py  pipeline.py
quirky/web/: index.css  index.html  index.js
tests/: test_agent.py  test_calibrate.py  test_fix.py  test_hooks_check.py  test_init_cmd.py  test_mcp_server.py  test_neural.py  test_skills.py  test_spans.py  test_tighten.py
(+2 files in other folders)
