[project]
name = "quirky"
version = "0.1.0"
description = "Quirky Human Preference Engine: A Universal Alignment Layer to restore human imperfection to synthetic media"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "opencv-python-headless>=4.5.0",
    "pillow>=9.0.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "scipy>=1.8.0",
    "websockets>=11.0",
    "jinja2>=3.0.0"
]

[project.scripts]
quirky = "quirky.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
