[project]
name = "quirky"
version = "0.1.2"
description = "Quirky Human Preference Engine: A Universal Alignment Layer to restore human imperfection to synthetic media"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "opencv-python-headless>=4.5.0",
    "pillow>=9.0.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "scipy>=1.8.0",
    "jinja2>=3.0.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
# Precise face targeting for touch-up (one tiny CPU edge model, ~10MB). No GPU.
vision = ["mediapipe>=0.10"]
# Neural repaint / voice-conversion plugins (ONNX Runtime + auto-downloaded,
# commercial-safe weights). Opt-in only; the core stays weight-free without this.
dl = [
    "onnxruntime>=1.17,<1.20",
    "huggingface-hub>=0.23",
]
agent = ["fastmcp>=3,<4"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
quirky = "quirky.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["quirky"]
